--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 		<ul>
 		<li><a href="#" class="active">Home</a></li>
 		<li><a href="#">About</a></li>
-		<li><a href="#">Services</a></li>
-		<li><a href="#">Our Drinks</a></li>
+<!-- 		<li><a href="#">Services</a></li>
+ -->	<li><a href="#">Drinks</a></li>
+		<li><a href="login.html">Login</a></li>
+		<li><a href="signup.html">Sign Up</a></li>
 		<li><a href="#">Contact</a></li>
-	</ul>
+		</ul>
 	</nav>
 	<section class="sec1"></section>
 	<section class="content">
