--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 	<section>
 		<div class="container">
 			<div class="user signinBx">
-				<div class="imgBx"><img src="./images/login.jpg"></div>
+				<div class="imgBx"><img src="./images/login.JPG"></div>
 		      <div class="formBx">
 				<form>
 					<h2>Sign In</h2>
